<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Weather icons -->
    <string name="weather_sunny" translatable="false">&#xf00d;</string>
    <string name="weather_clear_night" translatable="false">&#xf02e;</string>
    <string name="weather_fog" translatable="false">&#xf014;</string>
    <string name="weather_clouds" translatable="false">&#xf013;</string>
    <string name="weather_rain" translatable="false">&#xf019;</string>
    <string name="weather_showerRain" translatable="false">&#xf01a;</string>
    <string name="weather_snow" translatable="false">&#xf01b;</string>
    <string name="weather_thunder" translatable="false">&#xf016;</string>
    <string name="weather_thunder_lightRain" translatable="false">&#xf01d;</string>
    <string name="weather_thunder_heavyRain" translatable="false">&#xf01e;</string>
    <string name="weather_drizzle" translatable="false">&#xf01c;</string>
    <string name="weather_smoke" translatable="false">&#xf062;</string>
    <string name="weather_sand" translatable="false">&#xf082;</string>
    <string name="weather_dust" translatable="false">&#xf063;</string>
    <string name="weather_volcano" translatable="false">&#xf0c8;</string>
    <string name="weather_squall" translatable="false">&#xf050;</string>
    <string name="weather_tornado" translatable="false">&#xf056;</string>
    <!-- Symbols -->
    <string name="celsius" translatable="false">&#8451;</string>
    <string name="fahrenheit" translatable="false">&#8457;</string>
    <string name="percent" translatable="false">&#37;</string>
    <string name="barometer" translatable="false">&#xf079;</string>
    <string name="humidityIcon" translatable="false">&#xf07a;</string>
    <string name="degree" translatable="false">&#186;</string>

    <!-- App strings -->
    <string name="app_name" translatable="false">Weather</string>

    <string name="cities_list">Список городов</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="temperature">Температура: </string>
    <string name="show_humidity">Показывать влажность</string>
    <string name="show_overcast">Показывать облачность</string>
    <string name="humidity">Влажность:</string>
    <string name="overcast">Облачность:</string>
    <string name="get_temp">Получить температуру</string>
    <string name="sunny">Солнечно</string>
    <string name="cloudy">Облачно</string>
    <string name="partly_cloudy">Частичная облачность</string>
    <string name="photo_of_a_city">Фотография города</string>

    <string name="change_city_button">Кнопка смены города</string>
    <string name="choose_city">Выберите город</string>
    <string name="city">Город</string>
    <string name="add_city">Добавить город</string>
    <string name="update_weather">Обновить погоду</string>
    <string name="settings">Настройки</string>
    <string name="city_not_found">Город не найден</string>
    <string name="empty_list">Пустой список</string>
    <string name="updating">Обновляем погоду…</string>
    <string name="moscow">Москва</string>
    <string name="spb">Санкт-Петербург</string>
    <string name="kazan">Казань</string>
    <string name="ptz">Петрозаводск</string>
    <string name="add">Добавить</string>
    <string name="add_api">Добавить ключ API</string>
    <string name="remove">Убрать</string>
    <string name="weather_last_week">Погода на прошлой неделе:</string>
    <string name="go_back">Назад</string>
    <string name="delete_city">Удалить город</string>
    <string name="dark_theme">Темная тема</string>
    <string name="cancel">Отмена</string>
    <string name="city_added">Город добавлен</string>
    <string name="ms">м/с</string>
    <string name="pressure">Давление:</string>
    <string name="hPa">гПа</string>
    <string name="last_update">Последние обновление: </string>
    <string name="mmHg">мм рт.ст.</string>
    <string name="wind">Ветер: </string>
    <string name="city_is_already_in_list">уже в списке</string>
    <string name="github_repository">GitHub репозиторий</string>
    <string name="about">О разработчике</string>
    <string name="send_feedback">Отправить отзыв</string>
    <string name="app_logo">Логотип приложения</string>
    <string name="communicate">Связаться</string>
    <string name="made_by">разработчик: Асадуллин Наиль</string>
    <string name="degree_word">Градусы: </string>
    <string name="send_me_email">Отправить мне письмо</string>
    <string name="cant_find_GPS">Не могу получить данные от GPS</string>
    <string name="get_city_name_by_gps">Получить ваше местоположение через GPS</string>
    <string name="now">Сейчас</string>
    <string name="account">Аккаунт</string>
    <string name="exit">EXIT</string>
    <string name="yes">Да</string>
    <string name="icon">Иконка погоды</string>
    <string name="max">max: %1$s</string>
    <string name="min">min: %1$s</string>
    <string name="feelsLike">Чувствуется как: %1$s</string>
    <string name="title_weather">Погода</string>
    <string name="oneLineWidget">Виджет в 1 строку</string>
    <string name="twoLineWidget">Большой виджет</string>
    <string name="api_key">Ключ</string>
    <string name="hello">Привет!</string>
    <string name="intro_text_1">Это приложение использует данные с сайта:</string>
    <string name="intro_text_2">https://openweathermap.org</string>
    <string name="intro_text_3">Для того чтобы им пользоваться нужно зарегистрироваться по адресу:</string>
    <string name="intro_text_4">https://openweathermap.org/home/sign_up</string>
    <string name="intro_text_5">Затем нужно скопировать ключ со страницы:</string>
    <string name="intro_text_6">https://home.openweathermap.org/api_keys</string>
    <string name="intro_text_7">После этого ключ надо вставить в настройках</string>
    <string name="openweather_logo">OpenWeather logo</string>
    <string name="first_settings">Настройки: шаг 1</string>
    <string name="second_settings">Настройки: шаг 2</string>
    <string name="third_settings">Настройки: шаг 3</string>
</resources>
