<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/first_settings"
        android:textSize="32sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autoLink="web"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/intro_text_1"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/openweatherlogo"
        android:contentDescription="@string/openweather_logo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoLink="web"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/intro_text_3"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:autoLink="web"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/intro_text_4"
        android:textSize="16sp" />



</LinearLayout>