<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_city">

    <fragment
        android:id="@+id/navigation_list"
        android:name="ru.nightgoat.weather.presentation.list.ListFragment"
        android:label="@string/cities_list"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_navigation_list_to_navigation_city"
            app:destination="@id/navigation_city" />
        <action
            android:id="@+id/action_navigation_list_to_navigation_addCity"
            app:destination="@id/navigation_addCity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_city"
        android:name="ru.nightgoat.weather.presentation.city.CityFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_city" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="ru.nightgoat.weather.presentation.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_addCity"
        android:name="ru.nightgoat.weather.presentation.addCity.AddCityFragment"
        android:label="@string/add_city"
        tools:layout="@layout/fragment_add_city">
        <action
            android:id="@+id/action_navigation_addCity_to_navigation_list"
            app:destination="@id/navigation_list">
            <argument
                android:name="city_to_add"
                app:argType="string"/>
        </action>
    </fragment>
</navigation>
