<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.addCity.AddCityFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addCity_textInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/BoxedEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addCity_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ListView
        android:id="@+id/addCity_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/addCity_textInputLayout"
        app:layout_constraintEnd_toEndOf="@id/addCity_textInputLayout"
        app:layout_constraintTop_toBottomOf="@id/addCity_textInputLayout"
        app:layout_constraintBottom_toTopOf="@id/addCity_btn_cancel"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addCity_btn_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addCity_btn_add"
        android:layout_marginEnd="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/cancel"
        style="@style/AddCityButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addCity_btn_add"
        app:layout_constraintStart_toEndOf="@id/addCity_btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/add_city"
        style="@style/AddCityButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>