<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="11dp"
            android:backgroundTint="@color/colorBackgroundDark"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:id="@+id/settings_linear_api"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/ripple"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="API"
                    tools:ignore="HardcodedText"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/colorGrey"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    tools:text="ebde5f527ee721df0d5898fc5049493b"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="11dp"
            android:backgroundTint="@color/colorBackgroundDark"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/degree_word"
                    android:textSize="14sp" />

                <RadioGroup
                    android:id="@+id/settings_radGrpDegree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/settings_radBtnCelsius"
                        style="@style/rightRadioButton"
                        android:layout_marginStart="16dp"
                        android:gravity="center|end"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/celsius" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@color/colorGrey" />

                    <RadioButton
                        android:id="@+id/settings_radBtnFahrenheit"
                        style="@style/rightRadioButton"
                        android:layout_marginStart="16dp"
                        android:gravity="center|end"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/fahrenheit" />
                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="11dp"
            android:backgroundTint="@color/colorBackgroundDark"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/pressure"
                    android:textSize="14sp" />

                <RadioGroup
                    android:id="@+id/settings_radGrpPressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/settings_radBtnMmHg"
                        style="@style/rightRadioButton"
                        android:layout_marginStart="16dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/mmHg" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@color/colorGrey" />

                    <RadioButton
                        android:id="@+id/settings_radBtnHPa"
                        style="@style/rightRadioButton"
                        android:layout_marginStart="16dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/hPa" />
                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</ScrollView>