<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:hint="@string/choose_city"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Saint-Petersburg, RU" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_name"
            tools:text="31 дек. 1999 Ср. 23.49" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_date" />

        <TextView
            android:id="@+id/text_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="84sp"
            app:layout_constraintEnd_toStartOf="@id/city_image_icon"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_date"
            tools:text="-5&#8451;" />

        <ImageView
            android:id="@+id/city_image_icon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/icon"
            android:scaleType="fitCenter"
            android:src="@drawable/weather_icon"
            app:layout_constraintBottom_toBottomOf="@id/text_temp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_temp"
            app:layout_constraintTop_toTopOf="@id/text_temp" />

        <TextView
            android:id="@+id/text_weatherIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textSize="84sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/text_temp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_temp"
            tools:text="A" />

        <TextView
            android:id="@+id/text_feelsLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overcastValue"
            tools:text="feels like: -5&#8451;" />

        <TextView
            android:id="@+id/text_temp_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/text_temp_min"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_temp_min"
            tools:text="max: -3&#8451;" />

        <TextView
            android:id="@+id/text_temp_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/text_temp_max"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_feelsLike"
            tools:text="min: -6&#8451;" />

        <TextView
            android:id="@+id/humidityWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/humidity"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_temp_min" />

        <TextView
            android:id="@+id/text_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/humidityWord"
            app:layout_constraintStart_toEndOf="@id/humidityWord"
            tools:text="99&#37;" />

        <TextView
            android:id="@+id/overcastValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_weatherIcon"
            tools:text="Частичная облачность" />

        <TextView
            android:id="@+id/pressureWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pressure"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/humidityWord"
            app:layout_constraintTop_toBottomOf="@id/humidityWord" />

        <TextView
            android:id="@+id/text_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/text_humidity"
            app:layout_constraintTop_toTopOf="@id/pressureWord"
            tools:text="1014Pa" />

        <TextView
            android:id="@+id/windWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/wind"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/humidityWord"
            app:layout_constraintTop_toBottomOf="@id/text_pressure" />

        <TextView
            android:id="@+id/text_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/text_humidity"
            app:layout_constraintTop_toTopOf="@id/windWord"
            tools:text="2m/s" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>